@@ -1,5 +1,15 @@
 2023-03-13  G. Branden Robinson <g.branden.robinson@gmail.com>
 
+	[tests]: Add Spanish language support (5/5).
+
+	* src/roff/groff/tests/localization_works.sh:
+	* tmac/tests/e_ld-works.sh: Test it.
+
+	Fixes <https://savannah.gnu.org/bugs/?63921>.  Thanks to Eloi
+	Montañés.
+
+2023-03-13  G. Branden Robinson <g.branden.robinson@gmail.com>
+
 	[docs]: Add Spanish language support (4/5).
 
 	* doc/groff.texi (Manipulating Hyphenation):
